--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,23 @@
     tools:context="com.khalid.gazzawi.kgtest.MainActivity">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="Hello Khalid and Gazzawi!!"
+        android:id="@+id/hello"
+        />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/hello"
+        android:text="Gazzawi Activity"
+        android:id="@+id/gazzawi"
+        android:onClick="showSecondActivity"
+        />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/gazzawi"
+        android:text="Khalid Activity"
+        android:onClick="showSecondActivity"/>
 </RelativeLayout>
