--- a/app/src/main/res/layout/khalid_layout.xml
+++ b/app/src/main/res/layout/khalid_layout.xml
@@ -7,10 +7,12 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="@string/hent_message"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        android:id="@+id/msg"/>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Send"
+        android:onClick="send_msg"
         />
 </LinearLayout>
