--- a/app/src/main/res/layout/activity_kthird.xml
+++ b/app/src/main/res/layout/activity_kthird.xml
@@ -8,7 +8,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.khalid.gazzawi.kgtest.KThirdActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:weightSum="1">
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -18,4 +19,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Subject"/>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:id="@+id/textView2"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="1"
+        android:hint="Message"
+        android:gravity="center_vertical"
+        android:textSize="22dp"
+         />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Send"
+        android:layout_gravity="right"
+        />
 </LinearLayout>
